# seq64-tests

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  bootstrap  configure.ac  old-configure.ac  pack  strap_functions
contrib/: testing-steps.txt
libseq64/include/: Makefile.am  calculations_helpers.hpp  calculations_unit_test.hpp  click_helpers.hpp  click_unit_test.hpp  common_helpers.hpp  gui_assistant_dummy.hpp  keystroke_helpers.hpp  keystroke_unit_test.hpp  midifile_helpers.hpp  midifile_unit_test.hpp
libseq64/src/: Makefile.am  calculations_helpers.cpp  calculations_unit_test.cpp  click_helpers.cpp  click_unit_test.cpp  common_helpers.cpp  gui_assistant_dummy.cpp  keystroke_helpers.cpp  keystroke_unit_test.cpp  libseq64_unit_test.cpp  midifile_helpers.cpp  midifile_unit_test.cpp  test_script
m4/: Makefile.am
resources/: valgrind-tests.supp
